--- a/styleaddstudent.css
+++ b/styleaddstudent.css
@@ -53,10 +53,14 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    display: block;
+    margin: 0 auto;
 }
 
 input[type=submit]:hover {
     background-color: #3e8e41;
+    display: block;
+    margin: 0 auto;
 }
 
 /* Style for the error messages */
