--- a/stylesss.css
+++ b/stylesss.css
@@ -97,7 +97,7 @@ header{
     width: 65%;
     height: 100%;
     float: left;
-    background-color: #ebd5d5;
+    background-color: #ffffff;
     transition: width 0.5s;
 }
 /* Style for post container */
@@ -166,7 +166,7 @@ header{
   background-color: #f2f2f2;
   border: none;
   font-size: 15px;
-  padding: 5px 10px;
+  padding: 10px 10px;
   border-radius: 5px;
   cursor: pointer;
   }
@@ -174,7 +174,7 @@ header{
     width: 60px;
     background-color: #f2f2f2;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 10px;
     font-size: 15px;
     cursor: pointer;
     border-radius: 5px;
@@ -186,7 +186,7 @@ header{
     width: 60px;
   background-color: #f2f2f2;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 10px;
   border-radius: 5px;
   font-size: 15px;
   cursor: pointer;
